# algorithms_net

./: CMakeLists.txt  README.md
include/: SubarraySumEqualsK.hpp  sp_FindDuplicatesArray.hpp  sp_FindDuplicatesArray_Hash.hpp  sp_GMP.hpp  sp_IntervalMap.hpp  sp_KadaneMaximumSubarraySum.hpp  sp_LongestIncreasingSubsequence.hpp  sp_Matching.hpp  sp_MaximumProfitStockTrading.hpp  sp_PartitionProblem.hpp  sp_SlidingWindowMinimumMaximum.hpp  sp_SubarraySumEqualsK.hpp  sp_SubarraySumEqualsKadane.hpp  sp_calg.h  sp_cppalg.h  sp_dijkstra-bk.hpp  sp_dijkstra.hpp  sp_greedy.hpp  sp_numberic.hpp
include1/: sp_greedy.hpp  sp_numberic.hpp
python3/: SubarraySumEqualsK.py  ggreeting_01.py  py_SubarraySumEqualsK.py  py_greedy.py  spy_CubicEquation.py  spy_FindDuplicatesArray_Hash.py  spy_LinearLogisticRegression.py  spy_SubarraySumEqualsK.py  spy_TrainingwithCSV.py  spy_dijkstra.py  spy_greedy.py  spy_plot_solution.py  spy_thread.py
src/: CMakeLists.txt  CMakeLists.txt.bak  Top 10 financial problem.txt  Top 10 financial problem.txt.bak  Top10financialProblem.txt  alg_vector.h.bak  sp_alg_vector.c  sp_alg_vector.h
src/c/: c.c
src/greedy-algo/: sp_alg_greedy.cpp
src/kandane-algo/: sp_alg_kandane.c
src/lis-algo/: sp_alg_lis.c
src/sp_calg/: sp_calg.c
src/sp_cppalg/: sp_cppalg.cpp
test/vector/: main.c  main.c.bak
tests/: main-bk.cpp  main.cpp
tests/algo/: main.cpp
tests/console/: main.cpp  main.cpp.bak
x-thinkcell/: AAAAAAAA.hpp  Makefile  launch.json  main.cpp  main1.cpp
x-thinkcell/x-gmp/: gmp_example.c  gmp_example.h  gmp_example.h.bak  libgmp-10.def  libgmp.exp  libgmp.lib  libgmp_example.lib
xdoc/: BSP.txt  CEFR.txt  TMP.Oday  Yocto.txt  btree.txt  today.txt
xdriver/: ch34x.c  ch34x.c.bak
xffmpeg/: FFWrapper.c  Makefile  Makefile-Linix  config.h  config_components.h  doc.txt  ffmpeg.c  list_devices.c  main.c  question_ffmpeg.txt  tasks.txt
xffmpeg/FFmpeg-demo/: FFmpeg-demo.sln
xffmpeg/ffmpeg/: doc.txt  ffmpeg.sln
xffmpeg/gtk-gui/: Makefile  main.c  z.cfg
xffmpeg/python-3.11.8/: export_oxxn_model.py  test.py  test_onnx_accuracy.py  x.bat
xgstream/: Makefile  doc.txt  list_codecs.c  main.c
xnodejs/: index.html  index.js  question_nodejs.txt
xopenCV/: Makefile  main.cpp  question_opencv.txt  task.txt
xopenGL/: Makefile  abgr  evaltest  halomagic
xopenGLES/: question_openGLES.txt
xreactJS/: question_reactJS.txt
xstm32F407G/: LEDPD12.c  Termilogy.txt  doc.txt  top10_mcu_manufacturers.csv  xstm32F407G.ioc
xtmp/: Next.html  btree.txt  fotmat.cpp  launch.json  main.c  today.txt
xvulkan/: question_vulkan.txt
xwayland/: Makefile  main.c  wayland_note.txt
(+85 files in other folders)
